# REXSI

./: .gitignore  ANALYSIS.md  README.md  pyproject.toml  requirements.txt
app/: docker-compose.yml
app/api/: Dockerfile  main.py  model_service.py  requirements.txt
app/db/: init.sql
app/frontend/: app.py
app/scripts/: build_items.py  populate_db.py
notebooks/: 01_data_preparation_eda.ipynb  02_baselines.ipynb  03_mf_bpr.ipynb  04_two_tower.ipynb  04b_hard_negatives.ipynb  05_ranking.ipynb  06_mmr.ipynb
src/: metrics.py
tests/: conftest.py  stress_test.py  test_integration.py  test_metrics.py  test_model_service.py  test_notebooks.py
