[project]
name = "kindle-recommender"
version = "1.0.0"
description = "Real-time recommendation system on Amazon Reviews 2023 (Kindle Store)"
readme = "README.md"
authors = [
    {name = "Kruthi Shandilya Maramraju"},
    {name = "Chaithanya Anugu"},
    {name = "Karthik Reddy Changal"},
    {name = "Nithin Sujith Nair"},
    {name = "Ana-Maria Borduselu"},
]
requires-python = ">=3.10,<3.13"
dependencies = [
    # training / notebooks
    "torch>=2.2",
    "faiss-cpu>=1.8",
    "lightgbm>=4.3",
    "numpy>=1.26",
    "pandas>=2.2,<3",
    "pyarrow>=15",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    # offline scripts (build_items, populate_db)
    "psycopg[binary]>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
# faiss-cpu is fine: the Flat index searches 100K x 64d in milliseconds on CPU.
# torch pulls the CUDA build automatically on Linux; on Windows add:
#   [[tool.uv.index]] with the pytorch cu121 index if you want GPU there.
